new modification for pro

--- a/index.html
+++ b/index.html
@@ -291,7 +291,8 @@
                                 <h3 style="color:#5D6D7E;">FRONT END DEVOLOPER</h3>
                                 <blockquote >
                                     <br>
-                                    <p>let not earn money but earn happines made by money</p>
+                                    <p>let not earn money but earn happiness
+                                         made by money</p>
                                     <br><br>
                                 </blockquote>
                             </div> 
